# virtual-display-extender

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
linux-receiver/: Cargo.toml
linux-receiver/assets/: install.sh  virtual-display-receiver.desktop
linux-receiver/src/: main.rs  pipeline.rs  tray.rs
mac-sender/: Package.swift
mac-sender/Sources/CGVirtualDisplayPrivate/: CGVirtualDisplayPrivate.m
mac-sender/Sources/CGVirtualDisplayPrivate/include/: CGVirtualDisplayPrivate.h
mac-sender/Sources/VirtualDisplayStreamer/: App.swift  Encoder.swift  ScreenCapture.swift  Streamer.swift  StreamingPipeline.swift  TestVirtualDisplay.swift  VirtualDisplay.swift
mac-sender/Sources/VirtualDisplayStreamer/Views/: MenuBarView.swift
messages/: from-linux.md  from-windows.md
scripts/: setup-linux.sh  setup-mac.sh  setup-windows.ps1
shared/: protocol.md
shared/messages/: linux-to-win.md  win-to-linux.md
win-sender/: Cargo.toml
win-sender/src/: config.rs  main.rs  monitor.rs  pipeline.rs  shortcut.rs  tray.rs  virtual_display.rs
