[package]
name = "win-sender"
version = "0.1.0"
edition = "2021"
description = "GStreamer-based RTP/UDP H.264 sender for the Virtual Display Extender project (Windows)"

[dependencies]
gstreamer = "0.23"
glib = "0.20"
ctrlc = { version = "3.4", features = ["termination"] }
clap = { version = "4", features = ["derive"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
]
